c2prj1_cards/grade.txt
Grading at Tue Aug  7 03:34:21 UTC 2018
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:40:8: error: ‘Jack’ undeclared (first use in this function)
   case Jack:
        ^
cards.c:40:8: note: each undeclared identifier is reported only once for each function it appears in
cards.c:42:8: error: ‘Queen’ undeclared (first use in this function)
   case Queen:
        ^
cards.c:44:8: error: ‘King’ undeclared (first use in this function)
   case King:
        ^
cards.c:46:8: error: ‘Ace’ undeclared (first use in this function)
   case Ace:
        ^
cards.c:47:1: error: ‘o’ undeclared (first use in this function)
 o     return 'A';
 ^
cards.c:47:7: error: expected ‘;’ before ‘return’
 o     return 'A';
       ^
cards.c: In function ‘card_from_num’:
cards.c:105:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i=0;
       ^
cards.c: In function ‘ranking_to_string’:
cards.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
